build: de-duplicate the poms and fix the version drift they were hiding (#522)
The module poms had grown four copies of the same release profile, a
repeated <url> the parent could supply, and versions written twice — and
the second copy had already drifted in three places.

Root pom:
- Pin derby and log4j2 through Spring Boot's own derby.version and
  log4j2.version properties. The spring-boot-dependencies BOM manages the
  rest of each family from them, so pinning only the artifacts declared
  here left derbyshared resolving to 10.16.1.1 underneath derby 10.17.1.0.
- Give protoc and the protobuf-java runtime one protobuf.version. They had
  drifted to 4.33.4 and 4.35.1, so generated code and the runtime it
  compiles against came from different releases.
- Drop maven.compiler.source/target: the Spring Boot parent already derives
  maven.compiler.release from java.version, and the compiler plugin ignores
  source/target once release is set.
- Drop the hard-coded spring-boot-starter version; the entry exists to
  attach an exclusion, and the literal could fall behind the parent.
- Share maven.api.version across the three maven-* artifacts.
- Add requireProfileIdsExist, so a mistyped -P fails instead of silently
  running without the profile.
- Set child.project.url.inherit.append.path=false so modules inherit <url>.

Modules:
- Replace the four copied release profiles with a central.skipPublishing
  property the root pom's plugin config reads, and let grpc-example and
  protogen-maven-plugin-test skip GitHub Packages too, as the other
  non-library modules already did.
- Drop the inherited <url> and, in data-test, the inherited <developers>.
- Use ${project.version} for reactor dependencies, not ${revision}.
- Name the groupId of assembly's jar and assembly plugins.
- Compose data-test's -Xmx16m onto @{argLine} instead of replacing it,
  which dropped the JaCoCo agent under the coverage profile.

data-test could not build either documented way: its main module-info
r